# ################################################################################
# Copyright (c) 2025 Contributors to the Eclipse Foundation
# 
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
# 
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https: //www.apache.org/licenses/LICENSE-2.0
# 
# SPDX-License-Identifier: Apache-2.0
# ################################################################################

[package]
name = "up-transport-iceoryx2-rust"
version = "0.1.0"
edition = "2024"
keywords = ["uProtocol", "SDK", "communication", "iceoryx", "iceoryx2"]

[dependencies]
up-rust = "0.7"
async-trait = "0.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
iceoryx2 = "0.6.1"
iceoryx2-bb-container = "0.6.1"
tracing = "0.1.41"
hostname = "0.4.1"
